[bugfix]: added missing icons to OpenSeadragon

--- a/examples/osd.html
+++ b/examples/osd.html
@@ -11,6 +11,7 @@
         var viewer = OpenSeadragon({
             id: "osd",
             tileSources: "http://localhost:3000/iiif/hals.jpg/info.json",
+            prefixUrl: "https://cdnjs.cloudflare.com/ajax/libs/openseadragon/4.1.0/images/",
         });
     </script>
 </body>
